--- a/index.html
+++ b/index.html
@@ -3,35 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rahul Nikhare - CV</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Rahul Nikhare | Sr. SRE & DevOps Engineer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Rahul Nikhare</h1>
-    <p>Senior DevOps | AWS | Kubernetes | Terraform</p>
-  </header>
-
-  <section>
-    <h2>About Me</h2>
-    <p>I am a Site Reliability Engineer with expertise in AWS, EKS, Terraform, and automation...</p>
+<body class="bg-light text-dark">
+  <!-- Header -->
+  <section class="text-center p-5 bg-dark text-white">
+    <h1 class="display-4">Rahul Nikhare</h1>
+    <p class="lead">Sr. SRE & DevOps Engineer | 7+ Yrs Experience</p>
+    <a href="assets/resume.pdf" class="btn btn-primary">📄 Download Resume</a>
+    <a href="mailto:rahulnikhare381995@gmail.com" class="btn btn-outline-light">✉ Contact Me</a>
   </section>
 
-  <section>
+  <!-- About -->
+  <section class="container py-5">
+    <h2>About Me</h2>
+    <p>I’m an Infrastructure and Reliability Engineer with 7+ years of experience in AWS cloud, Kubernetes, Terraform, CI/CD automation, and DevOps best practices. Adept at designing and managing scalable, secure, and highly available infrastructure for microservices environments.</p>
+  </section>
+
+  <!-- Skills -->
+  <section class="container py-5">
+    <h2>Skills</h2>
+    <span class="badge bg-primary m-1">AWS</span>
+    <span class="badge bg-dark m-1">Terraform</span>
+    <span class="badge bg-success m-1">Kubernetes</span>
+    <span class="badge bg-info m-1">Docker</span>
+    <span class="badge bg-warning m-1">Jenkins</span>
+    <span class="badge bg-danger m-1">GitHub Actions</span>
+  </section>
+
+  <!-- Experience -->
+  <section class="container py-5">
     <h2>Experience</h2>
     <ul>
-      <li><b>Company A</b> - Senior DevOps Engineer (2022–Present)</li>
-      <li><b>Company B</b> - SRE (2019–2022)</li>
+      <li><b>Sr. SRE Engineer</b> – GlobalLogic India (Aug 2024 – Present)</li>
+      <li><b>DevOps Consultant</b> – TCS (Feb 2022 – Aug 2024)</li>
+      <li><b>DevOps Engineer</b> – Extrapreneurs India (2019 – 2022)</li>
+      <li><b>System Support Engineer</b> – Infosys BPM (2018 – 2019)</li>
     </ul>
   </section>
 
-  <section>
-    <h2>Skills</h2>
-    <p>AWS, Kubernetes, Terraform, Jenkins, GitHub Actions, Linux, Datadog, CloudWatch</p>
+  <!-- Certifications -->
+  <section class="container py-5">
+    <h2>Certifications</h2>
+    <ul>
+      <li>AWS Solutions Architect Associate (SAA-C02)</li>
+      <li>Red Hat Certified System Administrator (RHCSA)</li>
+      <li>Oracle Cloud Infrastructure Foundation (OCI)</li>
+      <li>AWS GenAI</li>
+    </ul>
   </section>
 
-  <footer>
-    <p>📧 rahul@example.com | 🔗 <a href="https://linkedin.com/in/rahul">LinkedIn</a> | 💻 <a href="https://github.com/RahulNikhare08">GitHub</a></p>
+  <!-- Footer -->
+  <footer class="text-center p-4 bg-dark text-white">
+    <p>Connect with me: 
+      <a href="https://linkedin.com/in/rahul-nikhare-042633126" class="text-info"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/RahulNikhare08" class="text-light"><i class="fab fa-github"></i></a>
+    </p>
   </footer>
 </body>
 </html>
